video src changed

--- a/video-background/index.html
+++ b/video-background/index.html
@@ -9,14 +9,25 @@
   </head>
   <body>
     <header>
-      <!-- Video -->
-      <video
+      <!-- Video from directory (offline) -->
+
+      <!-- <video
         muted
         autoplay
         loop
         class="video"
         id="video"
         src="./rostislav-uzunov.mp4"
+      ></video> -->
+
+      <!-- Video from Github -->
+      <video
+        muted
+        autoplay
+        loop
+        class="video"
+        id="video"
+        src="https://raw.githubusercontent.com/EyeJeePy/helloWorld/main/video-background/rostislav-uzunov.mp4"
       ></video>
       <!-- Play/Pause Button -->
       <button type="button" class="play-pause">❙❙</button>
