--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <title>👽 Personal Portfolio</title>
+    <title>👽 Personal Page</title>
   </head>
   <body>
     <section id="welcome-section">
@@ -16,54 +16,56 @@
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
-      <h1>hello</h1>
-      <h2>welcome</h2>
+      <h1>hello!</h1>
+      <h2>welcome to my portfolio</h2>
+      <h2>check out my latest projects (which are also the first ones) and contact me any time</h2>
     </section>
     <section id="projects" class="projects">
-      <h2></h2><span id="span1">Projects</span></h2>
+      <span id="span1">Projects</span>
       <div class="project-tile">
-        <div class="tile"><a href="">
-          <img src="../images/video-background.png" alt="" />
+        <div class="tile"><a href="https://codepen.io/cyberhominid/full/ZEJQwJN" target="_blank">
+          <img src="./images/video-background.png" alt="" />
           <h3>Video Background</h3>
           <h4>HTML / CSS / JS</h4>
         </a></div>
-        <div class="tile"><a href="https://codepen.io/cyberhominid/full/powBQqN">
-          <img src="../images/random-color-picker.png" alt="" />
+        <div class="tile"><a href="https://codepen.io/cyberhominid/full/powBQqN" target="_blank">
+          <img src="./images/random-color-picker.png" alt="" />
           <h3>Random Color Picker</h3>
           <h4>HTML / CSS / JS</h4>
         </a></div>
-        <div class="tile"><a href="https://codepen.io/cyberhominid/full/GRELaOM">
-          <img src="../images/modal-spammer.png" alt="" />
-          <h3>Modal Spammer</h3>
-          <h4>HTML / CSS / JS</h4>
+        <div class="tile">
+          <a href="https://codepen.io/cyberhominid/full/GRELaOM" target="_blank">
+          <img src="./images/living-room.png" alt="" />
+          <h3>Living Room</h3>
+          <h4>Under Construction</h4>
+          <!-- <h4>HTML / CSS / JS</h4> -->
         </a></div>
-        <div class="tile"><a href="https://codepen.io/cyberhominid/full/JjbJYOz">
-          <img src="../images/login-form.png" alt="" />
+        <div class="tile"><a href="https://codepen.io/cyberhominid/full/JjbJYOz" target="_blank">
+          <img src="./images/login-page.png" alt="" />
           <h3>Login Form</h3>
           <h4>HTML / CSS</h4>
         </a></div>
-        <div class="tile"><a href="https://codepen.io/cyberhominid/full/BaQKBRO">
-          <img src="../images/documentation-page.png" alt="" />
+        <div class="tile"><a href="https://codepen.io/cyberhominid/full/BaQKBRO" target="_blank">
+          <img src="./images/documentation-page.png" alt="" />
           <h3>Documentation Page</h3>
           <h4>HTML / CSS</h4>
         </a></div>
-        <div class="tile"><a href="https://codepen.io/cyberhominid/full/YzpXyop">
-          <img src="../images/landing-page.png" alt="" />
+        <div class="tile"><a href="https://codepen.io/cyberhominid/full/YzpXyop" target="_blank">
+          <img src="./images/landing-page.png" alt="" />
           <h3>Product Landing Page</h3>
           <h4>HTML / CSS</h4>
         </a></div>
       </div>
-      <a href="https://codepen.io/cyberhominid/"><button class="see-more">See more</button></a>
+      <a href="https://codepen.io/cyberhominid/" target="_blank"><button class="see-more">See more</button></a>
     </section>
     <section id="contact">
-      <div class="contact">
         <div class="footer-links">
-          <a href="https://github.com/EyeJeePy" id="profile-link"><i class="fab fa-github"></i> gitHub</a>
-          <a href="https://codepen.io/cyberhominid/" id="profile-link"><i class="fab fa-codepen"></i> codePen</a>
-          <a href="mailto:isadora.g.paula@outlook.com"><i class="fas fa-at"></i> mailMe</a></div>
+          <div><a href="https://github.com/EyeJeePy" id="profile-link" target="_blank"><i class="fab fa-github icon"></i> gitHub</a></div>
+          <div><a href="https://codepen.io/cyberhominid/" id="profile-link" target="_blank"><i class="fab fa-codepen icon"></i> codePen</a></div>
+          <div><a href="mailto:isadora.g.paula@outlook.com"><i class="fas fa-at icon" target="_blank"></i> mailMe</a></div>
         </div>
-        <a class="touch" href="https://www.youtube.com/watch?v=0Gkhol2Q1og">
         <div class="footer-text">
+        <a class="touch" target="_blank" href="https://www.youtube.com/watch?v=0Gkhol2Q1og">
           <p>Pictures came with touch</p>
           <p>A painter in my mind</p>
           <p>Tell me what you see</p>
@@ -73,7 +75,7 @@
           <p>Where do I belong</p>
           <p>Tell me what you see</p>
           <p>I need something more</p>
-        </div></a>
+        </a></div>
         <div class="line"></div>
         <footer><h6>Icons from <a href="https://fontawesome.com/"><span class="span2">© </span>Fonticons</a></h6>
           <h6><a href="https://codepen.io/cyberhominid/"><span class="span2">© </span>Isadora 2021</a></h6>
