--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -24,34 +24,40 @@
       <span id="span1">Projects</span>
       <div class="project-tile">
         <div class="tile"><a href="https://codepen.io/cyberhominid/full/ZEJQwJN" target="_blank">
-          <img src="./images/video-background.png" alt="" />
+          <!-- <img src="./images/video-background.png" alt="" /> -->
+          <img src="https://github.com/EyeJeePy/helloWorld/blob/main/personal-portfolio/images/video-background.png?raw=true" alt="">
           <h3>Video Background</h3>
           <h4>HTML / CSS / JS</h4>
         </a></div>
         <div class="tile"><a href="https://codepen.io/cyberhominid/full/powBQqN" target="_blank">
-          <img src="./images/random-color-picker.png" alt="" />
+          <!-- <img src="./images/random-color-picker.png" alt="" /> -->
+          <img src="https://github.com/EyeJeePy/helloWorld/blob/main/personal-portfolio/images/random-color-picker.png?raw=true" alt="">
           <h3>Random Color Picker</h3>
           <h4>HTML / CSS / JS</h4>
         </a></div>
         <div class="tile">
           <a href="https://codepen.io/cyberhominid/full/GRELaOM" target="_blank">
-          <img src="./images/living-room.png" alt="" />
+          <!-- <img src="./images/living-room.png" alt="" /> -->
+          <img src="https://github.com/EyeJeePy/helloWorld/blob/main/personal-portfolio/images/living-room.png?raw=true" alt="">
           <h3>Living Room</h3>
           <h4>Under Construction</h4>
           <!-- <h4>HTML / CSS / JS</h4> -->
         </a></div>
         <div class="tile"><a href="https://codepen.io/cyberhominid/full/JjbJYOz" target="_blank">
-          <img src="./images/login-page.png" alt="" />
+          <!-- <img src="./images/login-page.png" alt="" /> -->
+          <img src="https://github.com/EyeJeePy/helloWorld/blob/main/personal-portfolio/images/login-page.png?raw=true" alt="">
           <h3>Login Form</h3>
           <h4>HTML / CSS</h4>
         </a></div>
         <div class="tile"><a href="https://codepen.io/cyberhominid/full/BaQKBRO" target="_blank">
-          <img src="./images/documentation-page.png" alt="" />
+          <!-- <img src="./images/documentation-page.png" alt="" /> -->
+          <img src="https://github.com/EyeJeePy/helloWorld/blob/main/personal-portfolio/images/documentation-page.png?raw=true" alt="">
           <h3>Documentation Page</h3>
           <h4>HTML / CSS</h4>
         </a></div>
         <div class="tile"><a href="https://codepen.io/cyberhominid/full/YzpXyop" target="_blank">
-          <img src="./images/landing-page.png" alt="" />
+          <!-- <img src="./images/landing-page.png" alt="" /> -->
+          <img src="https://github.com/EyeJeePy/helloWorld/blob/main/personal-portfolio/images/landing-page.png?raw=true" alt="">
           <h3>Product Landing Page</h3>
           <h4>HTML / CSS</h4>
         </a></div>
